set up css template

--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -13,7 +13,18 @@
 
     <title>Frontend Mentor | Testimonial-grid</title>
 
-    <style></style>
+    <style>
+      :root {
+        --card-purple: hsl(263, 55%, 52%);
+        --card-light-grey: hsl(0, 0%, 81%);
+        --card-dark-blue: hsl(0, 0%, 7%);
+        --card-light-blue: hsl(219, 29%, 14%) --;
+        --card-padding: 20px;
+        --card-margin: 10px;
+        --text-dark: hsl(219, 29%, 14%);
+        --text--light: hsl(0, 0%, 100%);
+      }
+    </style>
   </head>
   <body>
     <div class="testimonial-grid">
