--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -24,12 +24,102 @@
         --text-dark: hsl(219, 29%, 14%);
         --text--light: hsl(0, 0%, 100%);
       }
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        padding: 20px;
+        /* background-color: var(--text-light); */
+      }
+      img {
+        border-radius: 50%;
+      }
+      .name {
+        display: flex;
+        gap: 10px;
+      }
+      .name span {
+        margin-top: 10px;
+      }
+      .testimonial-grid {
+        display: grid;
+        grid-template-columns: repeat(auto, minmax(250px, 1fr));
+        gap: 20px;
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+      .testimonial-card-1 {
+        background-color: var(--card-purple);
+        color: var(--card-light-grey);
+        padding: var(--card-padding);
+        border-radius: 10px;
+      }
+      .testimonial-card-1 p,
+      .testimonial-card-2 p,
+      .testimonial-card-3 p,
+      .testimonial-card-4 p,
+      .testimonial-card-5 {
+        line-height: 1.8;
+      }
+      .testimonial-card-3,
+      .testimonial-card-5 {
+        background-color: hsl(214, 17%, 92%);
+        color: var(--text--dark);
+        padding: var(--card-padding);
+        border-radius: 10px;
+      }
+      .testimonial-card-2 {
+        color: var(--card-light-grey);
+        padding: var(--card-padding);
+        border-radius: 10px;
+        background-color: hsl(217, 19%, 35%);
+      }
+      .testimonial-card-4 {
+        color: var(--card-light-grey);
+        padding: var(--card-padding);
+        border-radius: 10px;
+        background-color: var(--card-dark-blue);
+      }
+      .testimonial-card-1 {
+        grid-column: 1/3;
+        grid-row: 1/2;
+      }
+      .testimonial-card-2 {
+        grid-column: 3/4;
+        grid-row: 1/2;
+      }
+      .testimonial-card-5 {
+        grid-column: 4/5;
+        grid-row: 1/3;
+      }
+      .testimonial-card-3 {
+        grid-column: 1/2;
+        grid-row: 2/3;
+      }
+      .testimonial-card-4 {
+        grid-column: 2/4;
+        grid-row: 2/3;
+      }
+      @media (max-width: 768px) {
+        .testimonial-grid {
+          grid-template-columns: 1fr;
+        }
+        .testimonial-card-1,
+        .testimonial-card-2,
+        .testimonial-card-3,
+        .testimonial-card-4,
+        .testimonial-card-5 {
+          grid-column: auto !important;
+          grid-row: auto !important;
+        }
+      }
     </style>
   </head>
   <body>
     <div class="testimonial-grid">
-      <div class="testimonial-card">
-        <div class="">
+      <div class="testimonial-card-1">
+        <div class="name">
           <img src="./images/image-daniel.jpg" alt="Daniel" />
           <div class="testimonial-card-details">
             <h3>Daniel Clifford</h3>
@@ -54,8 +144,8 @@
         </div>
       </div>
 
-      <div class="testimonial-card">
-        <div>
+      <div class="testimonial-card-2">
+        <div class="name">
           <img src="./images/image-jonathan.jpg" alt="Jonathan" />
           <div class="testimonial-card-details">
             <h3>Jonathan Walters</h3>
@@ -71,71 +161,70 @@
           </p>
         </div>
       </div>
-      <div class="testimonial-card">
-        <div class="">
+      <div class="testimonial-card-3">
+        <div class="name">
           <img src="./images/image-jeanette.jpg" alt="Jeanette" />
           <div class="testiomonial-card-details">
             <h3>Jeanette Harmon</h3>
             <p>Verified Graduate</p>
           </div>
-          <div class="">
-            <p>An overall wonderful and rewarding experience</p>
-            <p>
-              “ Thank you for the wonderful experience! I now have a job I
-              really enjoy, and make a good living while doing something I love.
-              ”
-            </p>
-          </div>
+        </div>
+        <div class="">
+          <p>An overall wonderful and rewarding experience</p>
+          <p>
+            “ Thank you for the wonderful experience! I now have a job I really
+            enjoy, and make a good living while doing something I love. ”
+          </p>
         </div>
       </div>
-      <div class="testimonial-grid">
-        <div class="">
+      <div class="testimonial-card-4">
+        <div class="name">
           <img src="./images/image-patrick.jpg" alt="Patrick" />
           <div class="testimonial-card-details">
             <h3>Patrick Abrams</h3>
             <p>Verified Graduate</p>
           </div>
-          <div class="">
-            <p>
-              Awesome teaching support from TAs who did the bootcamp themselves.
-              Getting guidance from them and learning from their experiences was
-              easy.
-            </p>
-            <p>
-              "The staff seem genuinely concerned about my progress which I find
-              really refreshing. The program gave me the confidence necessary to
-              be able to go out in the world and present myself as a capable
-              junior developer. The standard is above the rest. You will get the
-              personal attention you need from an incredible community of smart
-              and amazing people. ”
-            </p>
-          </div>
+        </div>
+        <div class="">
+          <p>
+            Awesome teaching support from TAs who did the bootcamp themselves.
+            Getting guidance from them and learning from their experiences was
+            easy.
+          </p>
+          <p>
+            "The staff seem genuinely concerned about my progress which I find
+            really refreshing. The program gave me the confidence necessary to
+            be able to go out in the world and present myself as a capable
+            junior developer. The standard is above the rest. You will get the
+            personal attention you need from an incredible community of smart
+            and amazing people. ”
+          </p>
         </div>
       </div>
-      <div class="testimonial-card">
-        <div class="">
+      <div class="testimonial-card-5">
+        <div class="name">
           <img src="./images/image-kira.jpg" alt="Kira" />
           <div class="testimonial-card-details">
             <h3>Kira Whittle</h3>
             <p>Verified Graduate</p>
           </div>
-          <div class="">
-            <p>Such a life-changing experience. Highly recommended!</p>
-            <p>
-              “ Before joining the bootcamp, I’ve never written a line of code.
-              I needed some structure from professionals who can help me learn
-              programming step by step. I was encouraged to enroll by a former
-              student of theirs who can only say wonderful things about the
-              program. The entire curriculum and staff did not disappoint. They
-              were very hands-on and I never had to wait long for assistance.
-              The agile team project, in particular, was outstanding. It took my
-              learning to the next level in a way that no tutorial could ever
-              have. In fact, I’ve often referred to it during interviews as an
-              example of my developent experience. It certainly helped me land a
-              job as a full-stack developer after receiving multiple offers.
-              100% recommend! ”
-            </p>
-          </div>
+        </div>
+        <div class="">
+          <p>Such a life-changing experience. Highly recommended!</p>
+          <p>
+            “ Before joining the bootcamp, I’ve never written a line of code. I
+            needed some structure from professionals who can help me learn
+            programming step by step. I was encouraged to enroll by a former
+            student of theirs who can only say wonderful things about the
+            program. The entire curriculum and staff did not disappoint. They
+            were very hands-on and I never had to wait long for assistance. The
+            agile team project, in particular, was outstanding. It took my
+            learning to the next level in a way that no tutorial could ever
+            have. In fact, I’ve often referred to it during interviews as an
+            example of my developent experience. It certainly helped me land a
+            job as a full-stack developer after receiving multiple offers. 100%
+            recommend! ”
+          </p>
         </div>
       </div>
     </div>
